# Dahlia

./: .env.example  .gitignore  Cargo.toml  Codebase.txt  Dockerfile  LICENSE  Makefile  PLANNING.md  README.md  docker-compose.yml  go.mod  go.sum  main.py  pyproject.toml
cmd/server/: main.go
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  DEVELOPMENT.md  api.md  architecture.md  configuration.md  deployment.md  development.md
internal/api/: routes.go
internal/config/: config.go
internal/middleware/: middleware.go
pkg/logger/: logger.go
pkg/utils/: Cargo.toml
pkg/utils/rust-utils/: Cargo.toml
pkg/utils/rust-utils/src/: lib.rs
pkg/utils/src/: lib.rs
scripts/dahlia-cli/: Cargo.toml
scripts/dahlia-cli/src/: main.rs
scripts/python/: analytics.py  deploy.py
