[package]
name = "dahlia-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "CLI tool for Dahlia web server management"

[[bin]]
name = "dahlia"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true
reqwest = { version = "0.11", features = ["json"] }