[package]
name = "rust-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "High-performance utilities library"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true